--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"nodemon app.js"
+    "scripts": {
+      "start": "node app.js",
+      "dev": "nodemon app.js"
+   }
   },
   "keywords": [],
   "author": "",
