changing index.js to app.js as my main file

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "name": "spiceblog",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
   "devDependencies": {
     "nodemon": "^3.0.1"
   },
